--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "expokit": "^32.1.1",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
-    "react-native-shake": "^3.3.1"
+    "react-native-elements": "^1.1.0",
+    "react-native-shake": "^3.3.1",
+    "react-navigation": "^3.11.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
