--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -104,6 +104,7 @@ apply from: 'expo.gradle'
 // WHEN_PREPARING_SHELL_REMOVE_TO_HERE
 
 dependencies {
+    compile project(':react-native-haptic-feedback')
     compile project(':react-native-shake')
   implementation fileTree(dir: 'libs', include: ['*.jar'])
 
